cabal-version: 3.4

name:           caiolisp
version:        0.0.1
description:    Please see the README on GitHub at <https://github.com/caiorulli/caiolisp#readme>
homepage:       https://github.com/caiorulli/caiolisp#readme
bug-reports:    https://github.com/caiorulli/caiolisp/issues
author:         Caio Rulli Thomaz
maintainer:     caio@crthomaz.com.br
copyright:      2021 Caio Rulli Thomaz
license:        GPL-3.0-or-later
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/caiorulli/caiolisp

common shared-properties
  default-language: Haskell2010
  build-depends:
      base >=4.7 && <5
    , containers
    , mtl
    , megaparsec

library
  import: shared-properties
  exposed-modules:
      BackEnd
      FrontEnd
      Primitives
      TypeSystem
  hs-source-dirs:
      src

executable caiolisp-exe
  import: shared-properties
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      caiolisp
    , haskeline

test-suite caiolisp-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      caiolisp
    , hspec
